Allow continuous request dispatch below the throttle rate

ResourceDispatchThrottler will throttle requests when a give threshold
is reached within a given time window. However, it is overly restrictive
when the requests are continuous, as the sliding time window was keyed
off the most recently sent request.

Fix this by tracking the flush time, rather than the last sent request
time, allowing continuous request dispatch at or below the specified
throttling rate.

BUG=592037

Review URL: https://codereview.chromium.org/1834853003

Cr-Commit-Position: refs/heads/master@{#383740}

Former-commit-id: 46c01a93646af14072ce25fc59a9b59b29f097d7